--- a/sp404mk2tutorial/package.json
+++ b/sp404mk2tutorial/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "keywords": [
     "SP-404MKII",
@@ -31,7 +30,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
-    "tailwindcss": "^4.0.0",
-    "gh-pages": "^6.1.0"
+    "tailwindcss": "^4.0.0"
   }
 }
