--- a/sp404mk2tutorial/src/package.json
+++ b/sp404mk2tutorial/src/package.json
@@ -30,6 +30,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
