--- a/sp404mk2tutorial/vercel.json
+++ b/sp404mk2tutorial/vercel.json
@@ -1,11 +1,14 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "build",
+  "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "FORCE_REBUILD": "2024-12-12"
+  }
 }
